feat: integrate sample with UPMS via Feign